--- a/不想努力的时候看一看吧.md
+++ b/不想努力的时候看一看吧.md
@@ -1,5 +1,5 @@
 
-##     转载
+##     转载    鸡汤啊 一碗一碗的  喝一喝清醒下就行了  |  千万不要喝醉了
 *   买个闹钟，以便按时叫醒你
 >贪睡和不守时，都将成为你工作和事业上的绊脚石，任何时候都一样。不仅要学会准时，更要学会提前。就如你坐车去某地，沿途的风景很美，你忍不住下车看一看，后来虽然你还是赶到了某地，却不是准时到达。“闹钟”只是一种简单的标志和提示，真正灵活、实用的时间，掌握在每个人的心中。  
 
@@ -29,4 +29,11 @@
 
 *   写出你一生要做的事情，把单子放在皮夹里，经常拿出来看
 > 　　人生要有目标，要有计划，要有提醒，要有紧迫感。一个又一个小目标串起来，就成了你一生的大目标。生活富足了，环境改善了，不要忘了皮夹里那张看似薄薄的单子。
+
+
+ps ---  学会说服力，就开法拉利，学会说服力，马上买宾利，学会说服力，人生很得意，学会说服力，一切都顺利！
+
+ > 团队就是有口才的人讲话给有耳朵的人听
+ > 
+ >>先花80%的时间创造20%的结果 & 最后花20%的时间创造80%的结果
 
